--- a/package.json
+++ b/package.json
@@ -11,14 +11,15 @@
 		"@sveltejs/adapter-auto": "^3.0.0",
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
+		"@tsconfig/svelte": "^3.0.0",
 		"autoprefixer": "^10.4.16",
+		"mdsvex": "^0.11.0",
 		"postcss": "^8.4.32",
 		"svelte": "^4.2.7",
 		"tailwindcss": "^3.4.0",
-		"vite": "^5.0.3",
-		"@tsconfig/svelte": "^3.0.0",
 		"tslib": "^2.5.0",
-		"typescript": "^4.9.3"
+		"typescript": "^4.9.3",
+		"vite": "^5.0.3"
 	},
 	"type": "module"
 }
