--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
 		"autoprefixer": "^10.4.16",
 		"mdsvex": "^0.11.0",
 		"postcss": "^8.4.32",
+		"sass": "^1.69.5",
 		"svelte": "^4.2.7",
+		"svelte-preprocess": "^5.1.3",
 		"tailwindcss": "^3.4.0",
 		"tslib": "^2.5.0",
 		"typescript": "^4.9.3",
